modified:   projects.html

--- a/projects.html
+++ b/projects.html
@@ -19,11 +19,11 @@
         <h1>Some of my Projects are:</h1>
     </div>
   <main>
-    <a class="project" href="index.html">
+    <a class="project" href="https://github.com/Kashyap682/16-bit-processor-assembler">
       <h3>Simulator for 16-bit RISC Processor.</h3>
       <p>A simple Assembler and Simulator for 16-bit RISC Processor.</p>
     </a>
-    <a class="project" href="project2-link">
+    <a class="project" href="https://github.com/Kashyap682/Library-Management">
       <h2>Library Management.</h2>
       <p>A simple GUI tool for Library Admins.</p>
     </a>
