modified:   projects.html

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,10 @@
       <h2>Library Management.</h2>
       <p>A simple GUI tool for Library Admins.</p>
     </a>
+    <a class="project" href="https://github.com/Kashyap682/Memory-Module-Layered-Testbench" target="_blank">
+      <h2>Layered Testbench</h2>
+      <p>A Layered Testbench for Memory Module written in Verilog.</p>
+    </a>
   </main>
 </body>
 </html>
