deleted:    contacts.html 	modified:   index.html 	deleted:    projects.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=2.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Home</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <title>Kashyap Sindhav - Portfolio</title>
 </head>
 <body>
-  <div class="top-bar">
-    <div class="top-bar-content">
-      <ul class="navigation">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contacts.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
 
-  <div class="content">
+  <!-- Home Section -->
+  <div id="home" class="content">
     <h2>Hello! I'm Kashyap Sindhav.</h2>
-    <p>I'm a young student trying to join the workforce to gain some real-world experience and aquire new skills.</p>
+    <p>I'm a young student trying to join the workforce to gain some real-world experience and acquire new skills.</p>
     <p>I am familiar with:</p>
     <ul>
       <li>Python</li>
@@ -43,6 +37,34 @@
       <li>SHELL Scripting</li>
       <li>DBMS</li>
     </ul>
-  <div>
+  </div>
+
+  <!-- Projects Section -->
+  <div id="projects" class="content">
+    <h2>Some of my Projects are:</h2>
+    <main>
+      <a class="project" href="https://github.com/Kashyap682/16-bit-processor-assembler" target="_blank">
+        <h3>Simulator for 16-bit RISC Processor.</h3>
+        <p>A simple Assembler and Simulator for 16-bit RISC Processor.</p>
+      </a>
+      <a class="project" href="https://github.com/Kashyap682/Library-Management" target="_blank">
+        <h3>Library Management.</h3>
+        <p>A simple GUI tool for Library Admins.</p>
+      </a>
+      <a class="project" href="https://github.com/Kashyap682/Memory-Module-Layered-Testbench" target="_blank">
+        <h3>Layered Testbench</h3>
+        <p>A Layered Testbench for Memory Module written in Verilog.</p>
+      </a>
+    </main>
+  </div>
+
+  <!-- Contact Section -->
+  <div id="contact" class="content">
+    <h2>You can Contact me on:</h2>
+    <i class="fas fa-envelope"></i><a style="text-decoration: none; color: white;" href="mailto:kashyapsindhav682@gmail.com">&nbsp;Send Email</a><br>
+    <i class="fab fa-github"></i><a style="text-decoration: none; color: white;" href="https://www.github.com/Kashyap682" target="_blank">&nbsp;GitHub</a><br>
+    <i class="fab fa-linkedin"></i><a style="text-decoration: none; color: white;" href="https://www.linkedin.com/in/kashyapsindhav" target="_blank">&nbsp;LinkedIn</a><br>
+  </div>
+
 </body>
 </html>
