modified:   index.html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <p>I am familiar with:</p>
     <ul>
       <li>Python</li>
-      <li>HTML</li>
-      <li>MATLAB</li>
-      <li>Verilog</li>
       <li>C</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>Verilog</li>
+      <li>DBMS</li>
+      <li>MATLAB</li>
       <li>Java</li>
     </ul>
     <p>I have experience in tools like:</p>
@@ -30,12 +33,6 @@
       <li>MATLAB</li>
       <li>AWS Cloud</li>
       <li>Anaconda</li>
-    </ul>
-    <p>I'm currently learning:</p>
-    <ul>
-      <li>CSS</li>
-      <li>SHELL Scripting</li>
-      <li>DBMS</li>
     </ul>
   </div>
 
